--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   artemis: ^5.1.0
   cupertino_icons: ^1.0.0
   flutter_bloc: ^6.1.1
+  flutter_secure_storage: ^3.3.5
+  json_annotation: ^3.1.0
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
