I way try to use a Bloc to do the LoginSignUpProcess

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_bloc: ^6.1.1
   flutter_secure_storage: ^3.3.5
+  flutter_spinkit: ^4.1.2+1
   json_annotation: ^3.1.0
   shared_preferences: ^0.5.12+4
 
