--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_secure_storage: ^3.3.5
   flutter_spinkit: ^4.1.2+1
   json_annotation: ^3.1.0
+  lottie: ^0.7.0+1
   shared_preferences: ^0.5.12+4
 
 dev_dependencies:
@@ -48,9 +49,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  # To add assets t o your application, add an assets section, like this:
+  assets:
+    - assets/anims/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
