Todos specific to each todo

--- a/backend-strapi/api/todo/models/todo.settings.json
+++ b/backend-strapi/api/todo/models/todo.settings.json
@@ -14,14 +14,14 @@
     "name": {
       "type": "string"
     },
-    "location": {
-      "model": "location",
-      "via": "todos"
-    },
     "author": {
       "plugin": "users-permissions",
       "model": "user",
       "via": "todos"
+    },
+    "done": {
+      "type": "boolean",
+      "default": false
     }
   }
 }
