--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   json_annotation: ^3.1.0
   lottie: ^0.7.0+1
   shared_preferences: ^0.5.12+4
+  tuple: ^1.0.3
 
 dev_dependencies:
   flutter_test:
