setting include_if_null to false solved the problem of ignored field replaced by null

--- a/backend-strapi/api/todo/models/todo.settings.json
+++ b/backend-strapi/api/todo/models/todo.settings.json
@@ -22,6 +22,11 @@
     "done": {
       "type": "boolean",
       "default": false
+    },
+    "moods": {
+      "collection": "mood",
+      "via": "todos",
+      "dominant": true
     }
   }
 }
