Adding GRAPHQL Android studio plugin support for introspection

--- a/backend-strapi/package.json
+++ b/backend-strapi/package.json
@@ -14,7 +14,7 @@
     "knex": "<0.20.0",
     "sqlite3": "latest",
     "strapi": "3.2.5",
-    "strapi-admin": "3.2.5",
+    "strapi-admin": "^3.4.4",
     "strapi-connector-bookshelf": "3.2.5",
     "strapi-plugin-content-manager": "3.2.5",
     "strapi-plugin-content-type-builder": "3.2.5",
