--- a/backend-strapi/package.json
+++ b/backend-strapi/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {},
   "dependencies": {
     "knex": "<0.20.0",
+    "socket.io": "^3.1.1",
     "sqlite3": "latest",
     "strapi": "3.4.6",
     "strapi-admin": "^3.4.6",
